# zicket-contract

./: test_results.txt
contracts/event/: Cargo.toml
contracts/event/src/: integration_tests.rs  lib.rs  test.rs
contracts/factory/src/: deployment.rs  test.rs
contracts/factory/test-fixtures/: mock_event_contract.wasm
contracts/payments/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/ticket/src/: test.rs
