[package]
name = "event-contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
privacy-utils = { path = "../privacy-utils" }

[dev-dependencies]
payments-contract = { path = "../payments" }
ticket-contract = { path = "../ticket" }
soroban-sdk = { workspace = true, features = ["testutils"] }
